Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
-/* General styling parameters */
+/* Global Styles and Variables */
+:root {
+    --dark: #082032;
+    --medium: #2c394b;
+    --light: #35d7ff;
+    --accent: #ff6a3e;
+    --sunny: #f7f339;
+    --clouds: #939496;
+    --rain: #5387e1;
+    --snow: #ffffff;
+    --clear: #87ceeb;
+    --loader: #046d8b;
+    --borderDefault: #131313;
+    --bodyTextColorWhite: #fafbfc;
+    --bodyTextColorGray: #313131;
+    --error: #e82e00;
+
+    --border_shadow: 0px 0px 10px 2px, inset 0px 0px 10px 2px;
+
+    --headerFontSize: clamp(3rem, 2vw, 4rem);
+    --bodyFontSize: 1rem;
+    --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
+}
+
 *,
 *::before,
 *::after {
@@ -47,6 +70,8 @@ input {
     width: 100px;
     height: 30px;
     text-align: center;
+    border-radius: 6px;
+    border: none;
 }
 
 input,
@@ -234,6 +259,9 @@ label {
 
 /* Shoe size conversion */
 .shoe-container {
+    display: flex;
+    flex-direction: column;
+
     background-color: cadetblue;
 
     border-radius: 10px;
@@ -242,11 +270,16 @@ label {
 }
 .shoe-input-container {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-auto-flow: column;
+    grid-template-columns: repeat(7, 0.5fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
+    grid-column-gap: 4px;
     grid-row-gap: 0px;
-    overflow-wrap: break-word;
+    padding-top: 20px;
+    /* justify-items: center; */
+    align-items: end;
+    justify-content: space-evenly;
+    align-content: center;
 }
 
 .div1-shoe {
@@ -300,12 +333,18 @@ label {
 
 .shoe {
     display: flex;
-    border: 1px solid darkkhaki;
-    text-align: center;
     justify-content: center;
     align-items: center;
 }
 
-.shoe input {
-    width: 1fr;
+.shoe-input-container > input {
+    width: 100%;
+    justify-self: center;
+}
+.shoe > h2 {
+    margin: 0;
+}
+
+.underline {
+    border-bottom: 1px solid black;
 }
